// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon demo -- customStyle 1`] = `
<div>
  <i
    class="icon__link "
    style="margin-right:10px;"
  />
  <i
    class="icon__link test_cls "
    style="color:red;font-size:20px;"
  />
</div>
`;

exports[`Icon demo -- icon 1`] = `
.c4 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
}

.c5 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.c1 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.c1:before,
.c1:after {
  content: ' ';
  display: table;
}

.c1:after {
  clear: both;
}

.c1 .c3 {
  padding-left: 8px;
  padding-right: 8px;
}

.c0 {
  margin-bottom: 16px;
}

.c0:last-child {
  margin-bottom: 0;
}

.c2 {
  padding-top: 5px;
  line-height: 1.5;
  word-break: break-all;
}

.c10 {
  margin-right: 8px;
}

.c8 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c8 .c9 {
  color: #4074e1;
}

.c11 {
  color: #6b798e;
  font-size: 14px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
}

.c6 .c7,
.c6 .style__RadioTagWrap-VWxju {
  margin-right: 8px;
}

.c6 .c7:last-child,
.c6 .style__RadioTagWrap-VWxju:last-child {
  margin-right: 0;
}

.c6 .style__RadioButtonWrap-sjeVo {
  margin-right: -1px;
}

.c6 .style__RadioButtonWrap-sjeVo:first-child {
  border-radius: 2px 0 0 2px;
}

.c6 .style__RadioButtonWrap-sjeVo:last-child {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.c13 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  background: #ebedf0;
}

.c15 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c17 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: inline-block;
  vertical-align: middle;
}

.c19 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  background-color: #fff;
  box-shadow: 0 0.5px 0.5px #c3cad9;
  border-radius: 2px;
  border: 1px solid #c3cad9;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c21 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  background-color: #e69b9b;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c12 {
  position: relative;
  border-radius: 2px;
  overflow: hidden;
  box-sizing: border-box;
  cursor: pointer;
  background: #FFF;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  line-height: 16px;
}

.c12:hover {
  border-color: #4683e6;
}

.c12 .c18 {
  width: 20px;
  height: 20px;
}

.c12 .c20 {
  left: 13px;
  height: 10px;
}

.c12 .c14,
.c12 .c16 {
  line-height: 16px;
}

.c12 .c14 {
  padding-right: 20px;
}

.c12 .c16 {
  padding-left: 20px;
}

.c12 .c14 {
  display: none;
}

.c27 {
  position: relative;
}

.c29 {
  border: none;
  outline: none;
  padding: 0;
  color: inherit;
  line-height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.c29::-webkit-input-placeholder {
  color: #abb4c3;
}

.c29::-moz-placeholder {
  color: #abb4c3;
}

.c29:-ms-input-placeholder {
  color: #abb4c3;
}

.c29::placeholder {
  color: #abb4c3;
}

.c24 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
}

.c26 {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  color: inherit;
  cursor: pointer;
  background: #fff;
  border-color: #c3cad9;
  display: inline-block;
  vertical-align: middle;
  cursor: not-allowed;
  pointer-events: none;
}

.c22 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #6b798e;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #c3cad9;
  padding-right: 22px;
}

.c22:hover {
  border-color: #4683e6;
}

.c22 .c28 {
  padding: 0 0 0 8px;
  text-align: left;
  width: 34px;
}

.c22 .c23,
.c22 .c25 {
  right: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.c22 .c23:hover,
.c22 .c25:hover {
  color: #4074e1;
}

.c22 .c23 {
  border-width: 0 0 0 1px;
  top: 0;
}

.c22 .c25 {
  border-width: 1px 0 0 1px;
  bottom: 0;
}

<div>
  <form
    class="demo-form"
  >
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        type
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c6"
        >
          <div
            checked=""
            class="c7 c8"
          >
            <i
              class="icon__cbox-ed c9 c10 "
            />
            circle-fill
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="icon__circle c9 c10 "
            />
            circle
          </div>
          <div
            class="c7 c11"
          >
            <i
              class="icon__circle c9 c10 "
            />
            loading
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        spin
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c12"
        >
          <div
            class="c13"
          >
            <span
              class="c14 c15"
            >
              ON
            </span>
            <span
              class="c16 c17"
            >
              OFF
            </span>
            <span
              class="c18 c19"
            >
              <span
                class="c20 c21"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        fontSize
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <div
          class="c22"
        >
          <div>
            <span
              class="c23 c24"
              unselectable="unselectable"
            >
              <i
                class="icon__caret-up "
              />
            </span>
            <span
              class="c25 c26"
              disabled=""
              unselectable="unselectable"
            >
              <i
                class="icon__caret-down "
              />
            </span>
          </div>
          <div
            class="c27"
          >
            <input
              autocomplete="off"
              class="c28 c29"
              max="100"
              min="12"
              step="1"
              value="12"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c0 c1"
    >
      <div
        class="c2 c3 c4"
        span="3"
      >
        color
      </div>
      <div
        class="c3 c5"
        span="9"
      >
        <input
          type="color"
          value="#000"
        />
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <i
      class="icon__circle-fill "
      style="font-size:12px;color:#000;"
    />
  </div>
</div>
`;

exports[`Icon demo -- spin 1`] = `
.c0.c0.c0 {
  -webkit-animation: iVXCSc 1.2s infinite linear;
  animation: iVXCSc 1.2s infinite linear;
  line-height: normal;
}

<div>
  <i
    class="icon__link c0"
    style="margin-right:10px;"
  />
  <i
    class="icon__check c0"
    style="margin-right:10px;"
  />
  <i
    class="icon__circle-check c0"
    style="margin-right:10px;"
  />
  <i
    class="icon__arrow-left c0"
    style="margin-right:10px;"
  />
  <i
    class="icon__checkbox c0"
    style="margin-right:10px;"
  />
  <i
    class="icon__loading c0"
    style="margin-right:10px;"
  />
</div>
`;

exports[`Icon demo -- type 1`] = `
<div>
  <i
    class="icon__link "
    style="margin-right:10px;"
  />
  <i
    class="icon__check "
    style="margin-right:10px;"
  />
  <i
    class="icon__circle-check "
    style="margin-right:10px;"
  />
  <i
    class="icon__arrow-left "
    style="margin-right:10px;"
  />
  <i
    class="icon__checkbox "
    style="margin-right:10px;"
  />
  <i
    class="icon__loading "
    style="margin-right:10px;"
  />
</div>
`;
